# bibliography

./: .buildinfo  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .lenvs  .pre-commit-config.yaml  .related  .tool-versions  bibtex-author-index.html  bibtex-institution-index.html  bibtex-journal-index.html  bibtex-publisher-index.html  bibtex-series-index.html  bibtex-tag-index.html  checklist.md  conf.py  doot.toml  genindex.html  index.html  index.rst  manage.py  objects.inv  polyglot.toml  pyproject.toml  readme.md  report.rst  search.html  searchindex.js  sitemap.xml  todo.org  tox.toml
.doctrees/: index.doctree
.doctrees/pages_/: test.doctree  years.doctree
.doctrees/timelines_/: readme.doctree
.doctrees/wiki_/: Home.doctree  process.doctree  reading-bibtex.doctree
.github/workflows/: pages.yml  static.yml
.gitlab/ci/: basic.yml
.polyglot/: task_utils.py
.polyglot/org/: conferences_secondary_todo.org
.tasks/: _lib_files.toml  _precommit.toml  android.toml  backup.toml  bib_format.py  biblio  bibliography_todos.org  bibtex.toml  bibtex_chunker.toml  bibtex_export.toml  bibtex_format.toml  bookmark.toml  bookmarks.py  bookmarks.toml  calendar.toml  cargo-alldocs  changed.toml  chunker.toml  chunking.toml  cleanup.toml  collectors.toml  commit.toml  compile.toml  conferences_primary_todo.org  conferences_secondary_todo.org  export.toml  extract.toml  format.toml  individuals_todo.org  journals_todo.org  lib-util.bash  make_html.toml  make_pdfs.toml  make_stubs.toml  metadata.toml  online.toml  orphans.toml  precommit.toml  refile.toml  sphinx.toml  (+8 more)
.tasks/_todo/: prepare_tex.py
.tasks/org/: tasks.org  triage_todos.org
bookmarks/: academia.org  reddit.bookmarks  resources.bookmarks  total.bookmarks  urls.org  wiki.bookmarks  youtube.bookmarks
completions/: author  author_parsed  author_unparsed  booktitle  dblp.confs.keys  dblp.journals.keys  dblp.journals.raw  institution  journal  organization  publisher  school  series  vcs_tags
in_progress/: 40k.bib  40k_codices.bib  40k_errata.bib  Books.bib  _misc.bib  ai-spec-gaming.bib  ai-spec-htmls.txt  ai_reviews  ai_spec_gaming.txt  aima-bib.bib  anthology  arxivs.bib  books.bib  cmu_dissertations.txt  computer_understanding.bib  conferences  conferences_primary  conferences_secondary  datasets.bib  deon.bib  dissertations_in_ai.bib  fiction.bib  gallagher_ai_literacy.bib  games.bib  gmu_tech_reports.bib  individuals  journals  leftbooks.bib  legal.bib  martens_logic.bib  martens_narrative.bib  martens_thesis.bib  media_matters  misc.bib  nonfiction.bib  online.bib  online2.bib  pentiment.xml  preprints.bib  proceedings_top.bib  (+29 more)
main/: 1215.bib  1320.bib  1517.bib  1567.bib  1637.bib  1665.bib  1700.bib  1701.bib  1730.bib  1733.bib  1773.bib  1787.bib  1788.bib  1790.bib  1792.bib  1797.bib  1799.bib  1803.bib  1814.bib  1817.bib  1819.bib  1821.bib  1832.bib  1833.bib  1845.bib  1849.bib  1850.bib  1852.bib  1853.bib  1856.bib  1858.bib  1859.bib  1863.bib  1865.bib  1868.bib  1870.bib  1871.bib  1873.bib  1875.bib  1878.bib  (+138 more)
pages_/: aisb.rst  extra.rst  indices.rst  of_interest.rst  test.html  years.html  years.rst
plus/: ai_spec_gaming.txt  aima-bib.bib  audible.org  audiobooks.org  favourites.bib  gmu_tech_reports.bib  important.bib  martens_logic.bib  martens_narrative.bib  martens_thesis.bib  media.org  music.org
plus/urls/: wiki  (+1 more)
tags/: logics.tags  people.sub
templates_/: domainindex.html  export_template.tex.jinja  media_post.jinja  report.html.jinja  report.rst.jinja  stub.bib.jinja
timelines_/: readme.html
wiki_/: Home.html  process.html  reading-bibtex.html
(+5448 files in other folders)
